--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloudflare-worker-webpack-plugin",
-  "version": "0.0.1",
-  "description": "Launch your Cloudflare Worker to the edge without ever leaving the build step 🚀",
+  "version": "0.0.1-beta.1",
+  "description": "Launch Cloudflare Workers to the Edge from the comfort of your build step 🚀",
   "main": "dist/index.js",
   "author": "Dave Willenberg <dave@detroit-english.de> (https://github.com/detroitenglish)",
   "license": "MIT",
