--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "homepage": "https://github.com/detroitenglish/cloudflare-worker-webpack-plugin",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint lib index.js webpack.config.js",
+    "lint": "./node_modules/.bin/eslint lib index.js",
     "precommit": "lint",
     "clean": "rm -fr ./dist/*",
     "bundle": "babel src -d dist",
@@ -37,6 +37,9 @@
     "husky": "^0.14.3",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.2"
+  },
+  "peerDependencies": {
+    "webpack": ">=4"
   },
   "repository": {
     "type": "git",
