Add colors and sugary optional chaining syntax

--- a/.babelrc
+++ b/.babelrc
@@ -13,5 +13,5 @@
       }
     ]
   ],
-  "plugins": ["closure-elimination"]
+  "plugins": ["closure-elimination", "@babel/plugin-proposal-optional-chaining"]
 }
