--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "colors": "^1.3.2"
+    "colors": "^1.3.2",
+    "is-valid-domain": "^0.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-rc.2",
     "@babel/core": "^7.0.0-rc.2",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0-rc.2",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0-rc.2",
     "@babel/polyfill": "^7.0.0-rc.2",
     "@babel/preset-env": "^7.0.0-rc.2",
