--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "is-valid-domain": "^0.0.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.3",
-    "@babel/core": "^7.0.0-rc.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-rc.3",
-    "@babel/polyfill": "^7.0.0-rc.3",
-    "@babel/preset-env": "^7.0.0-rc.3",
-    "babel-eslint": "^8.2.6",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-eslint": "^9.0.0",
     "babel-plugin-closure-elimination": "^1.3.0",
     "del-cli": "^1.1.0",
     "eslint": "^5.4.0",
