--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   ],
   "homepage": "https://github.com/detroitenglish/cloudflare-worker-webpack-plugin",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint src",
+    "lint": "./node_modules/.bin/eslint src .babelrc.js",
     "precommit": "npm run lint",
     "clean": "del-cli dist/*",
     "bundle": "babel src -d dist",
     "build": "npm-run-all -s lint clean bundle"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
+    "bluebird": "^3.5.1",
     "colors": "^1.3.2",
     "is-valid-domain": "^0.0.5"
   },
@@ -28,7 +30,6 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-eslint": "^9.0.0",
     "babel-plugin-closure-elimination": "^1.3.0",
