--- a/package.json
+++ b/package.json
@@ -24,25 +24,26 @@
     "build": "npm-run-all -s lint clean bundle"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "axios": "^0.18.0",
     "colors": "^1.3.3",
+    "core-js": "^3.1.2",
     "form-data": "^2.3.3",
-    "is-valid-domain": "^0.0.7"
+    "is-valid-domain": "^0.0.9"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "babel-eslint": "^10.0.1",
     "del-cli": "^1.1.0",
-    "eslint": "^5.14.1",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^1.3.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^2.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.4"
+    "prettier": "^1.17.1"
   },
   "peerDependencies": {
     "webpack": ">=4"
