--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "printWidth": 80,
-  "singleQuote": true,
-  "trailingComma": "es5",
+  "arrowParens": "avoid",
   "bracketSpacing": true,
+  "endOfLine": "lf",
+  "printWidth": 80,
   "semi": false,
-  "tabWidth": 2
+  "singleQuote": true,
+  "trailingComma": "es5"
 }
