--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
     "build": "npm-run-all -s lint clean bundle"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "axios": "^0.18.0",
-    "colors": "^1.3.3",
-    "core-js": "^3.1.2",
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.1",
+    "colors": "^1.4.0",
+    "core-js": "^3.12.1",
     "form-data": "^2.3.3",
-    "is-valid-domain": "^0.0.9"
+    "is-valid-host": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "babel-eslint": "^10.0.1",
-    "del-cli": "^1.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "del-cli": "^3.0.1",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.17.1"
+    "prettier": "^2.3.0"
   },
   "peerDependencies": {
     "webpack": ">=4"
@@ -56,6 +56,6 @@
     "cloudflare-workers"
   ],
   "engines": {
-    "node": ">=8"
+    "node": ">=12"
   }
 }
